# fusion4

./: .gitignore  Cargo.toml  README.md
examples/: _test.fu  chained_calculation.fu  comments.fu  enums.fu  exports.fu  functions.fu  generics.fu  pattern_matching.fu  result_type.fu  shorthand_functions.fu  structs.fu  test.fu  traits.fu  weird_indenting_line_breaks.fu
examples/std/: math.fu
examples/webserver/: main.fu
src/: grammar.pest  main.rs
src/ast_builder/: mod.rs
src/ast_nodes/: ast.rs  block.rs  expression.rs  func_call.rs  func_def.rs  indent.rs  mod.rs  program.rs  struct_def.rs  term.rs  var_access.rs
src/codegen/: context.rs  mod.rs
src/logger/: mod.rs
src/parser/: mod.rs
tree-sitter-fusion4/: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
treesitter-fusion/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.fu  tree-sitter.json
treesitter-fusion/bindings/c/: tree-sitter-fusion.pc.in
treesitter-fusion/bindings/go/: binding.go  binding_test.go
treesitter-fusion/bindings/node/: binding.cc  index.js
treesitter-fusion/bindings/python/tests/: test_binding.py
treesitter-fusion/bindings/python/tree_sitter_fusion/: __init__.py
treesitter-fusion/bindings/rust/: build.rs  lib.rs
treesitter-fusion/bindings/swift/TreeSitterFusion/: fusion.h
treesitter-fusion/bindings/swift/TreeSitterFusionTests/: TreeSitterFusionTests.swift
treesitter-fusion/src/: grammar.json  node-types.json
(+3 files in other folders)
